--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,13 @@
 <resources>
     <string name="app_name">Fragment Demo</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="cities">
+        <item>Berlin</item>
+        <item>Athenes</item>
+        <item>Rome</item>
+        <item>Tokyo</item>
+        <item>denmark</item>
+        <item>Ambesterdam</item>
+
+    </string-array>
 </resources>
